# quilt

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.test  DESIGN.md  LICENSE  README.md  coverage-summary.txt  justfile  morning_briefing_tests.long-type-890200862946165432.txt  package-lock.json  package.json  playwright.config.ts  pruebas-1-v4.yml  pruebas-1.yml
crates/quilt-analysis/: Cargo.toml
crates/quilt-analysis/src/: lib.rs  shared_decay.rs
crates/quilt-analysis/tests/: agent_room_integration.rs
crates/quilt-application/: Cargo.toml
crates/quilt-application/src/: bootstrap.rs  commands.rs  errors.rs  event_bridge.rs  event_bus.rs  lib.rs  queries.rs  query_service.rs  services.rs  sync_commands.rs  sync_service.rs
crates/quilt-application/tests/: apply_preset_use_case_tests.rs  apply_template_with_contract_tests.rs  block_use_cases_tests.rs  migration_tests.rs  preset_invariants_proptest.rs  projection_resolver_tests.rs  resource_use_cases_tests.rs  template_use_cases_tests.rs
crates/quilt-benchmarks/: Cargo.toml
crates/quilt-benchmarks/benches/: navigation_benchmarks.rs  query_benchmarks.rs  search_benchmarks.rs
crates/quilt-bin/: Cargo.toml
crates/quilt-bin/src/: main.rs  mcp_main.rs
crates/quilt-cognitive/: Cargo.toml
crates/quilt-cognitive/src/: ai_client.rs  ai_providers.rs  background_tasks.rs  engine.rs  graph_utils.rs  layer.rs  lib.rs  morning_briefing.rs  registry.rs
crates/quilt-core/: Cargo.toml
crates/quilt-core/src/: lib.rs  strategy.rs  strategy_scoring.rs  types.rs  wasm.rs
crates/quilt-core/tests/: outliner_edge_cases.rs  parser_proptest.proptest-regressions  parser_proptest.rs  property_schema_tests.rs  types_tests.rs
crates/quilt-domain/: Cargo.toml
crates/quilt-domain/src/: lib.rs  time.rs
crates/quilt-domain/tests/: block_format_tests.rs  domain_error_tests.rs  journal_day_proptest.rs  journal_tests.rs  ocp_compliance_proptest.rs  order_proptest.proptest-regressions  order_proptest.rs  parse_properties_proptest.rs  priority_tests.rs  property_value_proptest.rs  property_value_tests.rs  template_contract_tests.rs
crates/quilt-git-extension/: Cargo.toml
crates/quilt-git-extension/src/: lib.rs
crates/quilt-http/: Cargo.toml
crates/quilt-http/src/: error.rs  lib.rs  main.rs  mcp_ws.rs  middleware.rs  polling.rs  server.rs  state.rs
crates/quilt-http/tests/: http_integration.rs  mcp_ws.rs
crates/quilt-infrastructure/: Cargo.toml
crates/quilt-infrastructure/migrations/: 001_initial_schema.sql  002_deep_links.sql  003_user_settings.sql  004_journal_day.sql  005_add_refs_table.sql  006_add_page_properties.sql  007_add_ref_custom_context.sql  008_annotations.sql  009_graph_space.sql  010_page_source_tracking.sql
crates/quilt-infrastructure/src/: lib.rs
crates/quilt-infrastructure/tests/: annotation_migration.rs  annotation_repo.rs  migration_009_completed_cancelled_at.rs  property_keys.rs
crates/quilt-integration-tests/: Cargo.toml
crates/quilt-integration-tests/tests/: block_handler_integration.rs  domain_mcp_tests.rs  e2e_tests.rs  http_handler_integration.rs  page_handler_integration.rs  query_integration.rs
crates/quilt-mcp/: Cargo.toml
crates/quilt-mcp/src/: cognitive.rs  errors.rs  helpers.rs  lib.rs  notifications.rs  plugin.rs  protocol.rs  resources.rs  serialization.rs  server.rs  tools.rs  types.rs
crates/quilt-mcp/tests/: block_handler_tests.rs  evidence_contract_tests.rs  page_handler_tests.rs  resource_handler_tests.rs  serialization_tests.rs  template_contract_tests.rs
crates/quilt-platform/: Cargo.toml  tauri.conf.json
crates/quilt-platform/src/: cli.rs  global_app_state.rs  graph_validation.rs  init.rs  lib.rs  mcp_transport.rs  tauri.rs  watcher.rs
crates/quilt-platform/src-tauri/: Cargo.toml  tauri.conf.json
crates/quilt-platform/tests/: bootstrap_unified.rs  cli_integration_test.rs  cli_tests.rs
crates/quilt-query/: Cargo.toml
crates/quilt-query-core/: Cargo.toml
crates/quilt-query-core/src/: ast.rs  dialect.rs  grammar.rs  lib.rs  parser.rs
crates/quilt-query/src/: ast.rs  compiler.rs  dialect.rs  executor.rs  grammar.rs  lib.rs  merge.rs  parser.rs  property_op.rs  time_helpers.rs
crates/quilt-query/tests/: integration_test.rs  phase3_test.rs  phase3_test_ignored.rs.bak
crates/quilt-search/: Cargo.toml
crates/quilt-search/src/: indexing.rs  lib.rs  sanitize.rs  search.rs
crates/quilt-search/tests/: sanitize_proptest.proptest-regressions  sanitize_proptest.rs
crates/quilt-server/: Cargo.toml  build.rs
crates/quilt-server/src/: error.rs  lib.rs  main.rs  routes.rs  state.rs
crates/quilt-server/tests/: agent_room_endpoint_tests.rs  annotation_api_tests.rs  api_edge_cases.rs  cognitive_graph_endpoint_tests.rs  comments_api.rs  created_by_api.rs  decay_endpoint_tests.rs  editable_backlinks_api.rs  frontend_tests.rs  graph_lens_handler.rs  graph_validation_http.rs  health_tests.rs  helpers.rs  integration.rs  metrics_tests.rs  morning_briefing_tests.rs  navigate_integration_tests.rs  navigate_tests.rs  pages_search.rs  presets_endpoint_tests.rs  projection_endpoint_tests.rs  property_keys_handler.rs  property_validation_handler.rs  serendipity_endpoint_tests.rs  templates.rs  tour_state_api.rs  weekly_review_endpoint_tests.rs  ws_integration_tests.rs
crates/quilt-server/wasm_assets/: index.html  quilt-cm6.js  quilt-ui-6806e940f8049ff3.js  quilt-ui-9a8f7d96e7d8b09b.js  quilt-ui-a6ca470545c93f51.js  quilt-ui-d0d2ec36c11ffe27.js  quilt-ui-d0d2ec36c11ffe27_bg.wasm  style-132a93965d6be96b.css  style-7d0ad761a8313d5d.css  style.css
crates/quilt-sync/: Cargo.toml
crates/quilt-sync/src/: crdt.rs  crypto.rs  lib.rs  offline.rs  session.rs  state.rs  transport.rs
crates/quilt-test-helpers/: Cargo.toml
crates/quilt-test-helpers/src/: lib.rs
crates/quilt-types/: Cargo.toml
crates/quilt-types/src/: lib.rs
crates/quilt-ui/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  style.css  tailwind.config.js
crates/quilt-ui/cm6/: bundle.mjs  package-lock.json  package.json
(+1426 files in other folders)
