[workspace]
members = [
    "crates/quilt-domain",
    "crates/quilt-application",
    "crates/quilt-infrastructure",
    "crates/quilt-query",
    "crates/quilt-search",
    "crates/quilt-sync",
    "crates/quilt-mcp",
    "crates/quilt-git-extension",
    "crates/quilt-platform",
    "crates/quilt-bin",
    "crates/quilt-ui",
    "crates/quilt-ui-plugin",
    "crates/quilt-cognitive",
    "crates/quilt-server",
    "crates/quilt-integration-tests",
    "crates/quilt-benchmarks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Quilt Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cache
lru = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }

# Utils
once_cell = "1"
parking_lot = "0.12"

# Parsing
pest = "2"
pest_derive = "2"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# File watching
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# PDF generation (pure Rust)
genpdf = "0.2"
# Markdown parsing
pulldown-cmark = "0.12"

# For testing
tempfile = "3"
tokio-test = "0.4"

[workspace.features]
wasm = []

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
future_auto_implementations = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 0
