[workspace]
members = [
    "crates/quilt-domain",
    "crates/quilt-application",
    "crates/quilt-infrastructure",
    "crates/quilt-query-core",
    "crates/quilt-query",
    "crates/quilt-search",
    "crates/quilt-mcp",
    "crates/quilt-platform",
    "crates/quilt-bin",
    "crates/quilt-core",
    "crates/quilt-analysis",
    "crates/quilt-test-helpers",
    "crates/quilt-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Quilt Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Query DSL
pest = "2.7"
pest_derive = "2.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Cache
lru = "0.13"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Platform — Tauri shell in `quilt-platform`, React+Vite SPA in `quilt-ui/`

# Utils
once_cell = "1"
parking_lot = "0.12"
walkdir = "2"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# URL parsing
url = { version = "2", features = ["serde"] }

# Regex
regex = "1"

# File watching
# Use default features so the crate pulls in all platform backends:
#   - macos_fsevent (modern macOS), inotify (Linux), ReadDirectoryChangesW (Windows).
# `macos_kqueue` is the older macOS API and is not strictly needed.
notify = "6"

# For testing
tempfile = "3"
tokio-test = "0.4"

# PDF generation
genpdf = "0.2"

# Markdown parsing
pulldown-cmark = "0.13"

# Property-based testing
proptest = "1.4"

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
future_auto_implementations = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 0
