[package]
name = "quilt-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Structural analysis engine for the Quilt knowledge graph"

[dependencies]
quilt-domain = { path = "../quilt-domain" }
async-trait.workspace = true
chrono.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
lru.workspace = true
parking_lot.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test.workspace = true
quilt-test-helpers = { path = "../quilt-test-helpers" }
