[package]
name = "quilt-application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Application layer - use cases, commands, and queries"

[dependencies]
quilt-domain = { path = "../quilt-domain" }
quilt-query = { path = "../quilt-query" }
quilt-search = { path = "../quilt-search" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
