[package]
name = "quilt-application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Application layer - use cases, commands, and queries"

[dependencies]
quilt-core = { path = "../quilt-core" }
quilt-domain = { path = "../quilt-domain" }
quilt-query = { path = "../quilt-query" }
quilt-search = { path = "../quilt-search" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
pest = "2.7"
pest_derive = "2.7"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
url.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio-test.workspace = true
proptest.workspace = true
quilt-test-helpers = { path = "../quilt-test-helpers" }
tokio.workspace = true
