[package]
name = "quilt-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
# Domain
quilt-domain = { path = "../quilt-domain" }

# Application
quilt-application = { path = "../quilt-application" }

# Infrastructure
quilt-infrastructure = { path = "../quilt-infrastructure" }

# Query
quilt-query = { path = "../quilt-query" }

# Search
quilt-search = { path = "../quilt-search" }

# Async
tokio = { workspace = true, features = ["full"] }

# Test
tempfile = { workspace = true }
tokio-test = { workspace = true }

# UUID
uuid = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Criterion benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "query_benchmarks"
harness = false

[[bench]]
name = "search_benchmarks"
harness = false
