[package]
name = "quilt-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Quilt CLI binary"

[[bin]]
name = "quilt"
path = "src/main.rs"

[[bin]]
name = "quilt-mcp"
path = "src/mcp_main.rs"

[dependencies]
quilt-domain = { path = "../quilt-domain" }
quilt-platform = { path = "../quilt-platform" }
quilt-mcp = { path = "../quilt-mcp" }
quilt-cognitive = { path = "../quilt-cognitive" }
quilt-infrastructure = { path = "../quilt-infrastructure" }
quilt-search = { path = "../quilt-search" }
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
