[package]
name = "quilt-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Quilt CLI binary"

[[bin]]
name = "quilt"
path = "src/main.rs"

[dependencies]
quilt-platform = { path = "../quilt-platform" }
quilt-application = { path = "../quilt-application" }
quilt-infrastructure = { path = "../quilt-infrastructure" }
quilt-search = { path = "../quilt-search" }
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
