[package]
name = "quilt-cognitive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "AI Cognitive Features - CognitiveMirror, SerendipityEngine, AgentMemory"

[dependencies]
quilt-domain = { path = "../quilt-domain" }
async-trait.workspace = true
chrono.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
lru.workspace = true
genpdf.workspace = true
pulldown-cmark.workspace = true
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }

[features]
default = []
ollama = ["dep:reqwest"]
openai = ["dep:reqwest"]

[dev-dependencies]
tokio-test.workspace = true
