[package]
name = "quilt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Quilt Core — Portable domain types and outliner logic shared between Leptos and React frontends"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
thiserror.workspace = true
quilt-query = { path = "../quilt-query" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
proptest.workspace = true


