[package]
name = "quilt-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Pure domain layer - entities, value objects, and repository traits"

# Core domain dependencies (minimal, no infrastructure deps)
# Note: Domain should NOT depend on sqlx, tauri, etc.
[dependencies]
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
chrono-tz.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
proptest.workspace = true
chrono = { version = "0.4", features = ["serde"] }
