[package]
name = "quilt-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Pure domain layer - entities, value objects, and repository traits"

# Core domain dependencies (minimal, no infrastructure deps)
# Note: Domain should NOT depend on sqlx, tauri, etc.
[dependencies]
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
chrono-tz.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
url = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
proptest.workspace = true
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt"] }
