[package]
name = "quilt-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "HTTP server - REST API and WebSocket endpoints for web deployment"

[dependencies]
quilt-domain = { path = "../quilt-domain" }
quilt-application = { path = "../quilt-application" }
quilt-infrastructure = { path = "../quilt-infrastructure" }
quilt-mcp = { path = "../quilt-mcp" }
quilt-cognitive = { path = "../quilt-cognitive", features = ["ollama", "openai"] }
quilt-query = { path = "../quilt-query" }
quilt-search = { path = "../quilt-search" }
quilt-platform = { path = "../quilt-platform" }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["env"] }

# Database
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }

# Utilities
regex = "1"
chrono = { workspace = true }

# WebSocket
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Async streaming for SSE
async-stream = "0.3"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3"
axum-test = "15"
serde_urlencoded = "0.1"
reqwest = { workspace = true, features = ["json"] }

[[bin]]
name = "quilt-http"
path = "src/bin/quilt-http.rs"
required-features = []
