[package]
name = "quilt-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Domain
quilt-domain = { path = "../quilt-domain" }

# Application
quilt-application = { path = "../quilt-application" }

# Infrastructure
quilt-infrastructure = { path = "../quilt-infrastructure" }

# Query
quilt-query = { path = "../quilt-query" }

# Async
tokio = { workspace = true, features = ["full"] }

# Test
tempfile = { workspace = true }
tokio-test = { workspace = true }

# UUID
uuid = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Database
sqlx = { workspace = true }
