[package]
name = "quilt-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "MCP protocol layer - server, tools, resources, and notifications"

[dependencies]
quilt-domain = { path = "../quilt-domain" }
quilt-application = { path = "../quilt-application" }
quilt-search = { path = "../quilt-search" }
quilt-cognitive = { path = "../quilt-cognitive" }
sqlx.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
quilt-infrastructure = { path = "../quilt-infrastructure" }
