[package]
name = "quilt-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "MCP protocol layer - server, tools, resources, and notifications"

[dependencies]
quilt-application = { path = "../quilt-application" }
quilt-domain = { path = "../quilt-domain" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
quilt-domain = { path = "../quilt-domain" }
quilt-infrastructure = { path = "../quilt-infrastructure" }
quilt-search = { path = "../quilt-search" }
quilt-test-helpers = { path = "../quilt-test-helpers" }
sqlx.workspace = true
