[package]
name = "quilt-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "CLI adapter for Quilt (uses clap, not a desktop shell)"

[dependencies]
quilt-application = { path = "../quilt-application" }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
