[package]
name = "quilt-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "CLI adapter for Quilt (uses clap, not a desktop shell)"

[dependencies]
quilt-application = { path = "../quilt-application" }
quilt-infrastructure = { path = "../quilt-infrastructure" }
quilt-test-helpers = { path = "../quilt-test-helpers" }
quilt-domain = { path = "../quilt-domain" }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
sqlx.workspace = true
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }
dirs = "5"

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
