[package]
name = "quilt-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Query DSL - parser, AST, and executor for Logseq-style queries"

[dependencies]
quilt-domain = { path = "../quilt-domain" }
pest = "2.7"
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
quilt-application = { path = "../quilt-application" }
