[package]
name = "quilt-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Query DSL - parser, AST, and executor for Quilt-style queries"

[dependencies]
pest = "2.7"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
quilt-application = { path = "../quilt-application" }
