[package]
name = "quilt-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Query DSL - parser, AST, and executor for Quilt-style queries"

[dependencies]
# Re-export core parsing/AST from quilt-query-core (WASM-compatible)
quilt-query-core = { path = "../quilt-query-core" }

# Executor and compiler need sqlx + tokio
sqlx.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Re-exported from quilt-query-core for convenience
pest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
quilt-application = { path = "../quilt-application" }
