# Quilt Server
#
# HTTP server crate providing REST API + WebSocket + embedded frontend.
# Replaces the Tauri desktop shell with a standalone Axum server.

[package]
name = "quilt-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Quilt HTTP server with Axum — REST API, WebSocket, and embedded frontend"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Async runtime
tokio.workspace = true
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging & tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Domain dependencies
quilt-domain = { path = "../quilt-domain" }
quilt-application = { path = "../quilt-application" }
quilt-infrastructure = { path = "../quilt-infrastructure" }
quilt-mcp = { path = "../quilt-mcp" }
quilt-search = { path = "../quilt-search" }
quilt-platform = { path = "../quilt-platform" }
quilt-query = { path = "../quilt-query" }
quilt-analysis = { path = "../quilt-analysis" }
quilt-test-helpers = { path = "../quilt-test-helpers" }

# UUID
uuid.workspace = true

# Date/Time
chrono.workspace = true

# Bytes for body handling
bytes = "1"

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
tokio-test.workspace = true
axum = { version = "0.7", features = ["macros", "ws"] }
quilt-domain = { path = "../quilt-domain" }
quilt-platform = { path = "../quilt-platform" }
quilt-test-helpers = { path = "../quilt-test-helpers" }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }
tempfile.workspace = true
serde_json.workspace = true
