[package]
name = "quilt-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Sync engine for offline support"

[dependencies]
quilt-domain = { path = "../quilt-domain" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"], optional = true }

[features]
default = []
http-client = ["dep:reqwest"]

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
