[package]
name = "quilt-test-helpers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "In-memory test helpers for Quilt — Arc-wrapped repo builders and fixtures"

[dependencies]
quilt-domain = { path = "../quilt-domain" }
parking_lot.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
