[package]
name = "quilt-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Shared property type definitions — compiles to both native and WASM"

[dependencies]
serde = { workspace = true, features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# No extra deps needed — serde + std is sufficient for the shared types
