[package]
name = "quilt-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Quilt UI — Leptos-based WASM frontend"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "WebSocket",
    "Storage",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "WheelEvent",
    "TouchList",
    "Touch",
    "TouchEvent",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "HtmlImageElement",
    "HtmlDivElement",
    "HtmlElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "FocusEvent",
    "KeyboardEvent",
] }
serde-wasm-bindgen = "0.6"
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = { version = "0.6", features = ["json"] }
futures-channel = "0.3"
chrono = { version = "0.4", features = ["wasmbind"] }
tracing = "0.1"
quilt-ui-plugin = { path = "../quilt-ui-plugin" }
# Note: Tauri IPC uses window.__TAURI__.invoke via web_sys/js_sys (no tauri-invoke dep needed)
