[package]
name = "quilt-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Quilt UI — Leptos 0.8 WASM frontend with Tailwind CSS 4"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlInputElement",
    "KeyboardEvent", "MouseEvent", "DragEvent", "DataTransfer",
    "DomRect", "CssStyleDeclaration", "Storage",
    "Selection",
] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
gloo = { version = "0.11", features = ["net"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
uuid = { version = "1", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
