[package]
name = "quilt-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Workspace dependencies (via path for workspace members)
quilt-domain = { path = "../../../crates/quilt-domain" }
quilt-application = { path = "../../../crates/quilt-application" }
quilt-infrastructure = { path = "../../../crates/quilt-infrastructure" }
quilt-mcp = { path = "../../../crates/quilt-mcp" }
quilt-query = { path = "../../../crates/quilt-query" }
quilt-search = { path = "../../../crates/quilt-search" }
quilt-cognitive = { path = "../../../crates/quilt-cognitive" }
quilt-platform = { path = ".." }

# Tauri
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
url = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[[bin]]
name = "quilt-desktop"
path = "src/main.rs"
